<resources>
    <string name="app_name">邮箱</string>
    <string name="hint_mailaddr">邮箱发送地址</string>
    <string name="hint_password">密码</string>
    <string name="hint_subject">标题</string>
    <string name="hint_content">邮件正文</string>
    <string name="cb_savepw">记住密码</string>
    <string name="cb_autologin">自动登录</string>
    <string name="btn_login">登陆</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_relay">回复/转发</string>
    <string name="btn_sent">发送</string>
</resources>
