<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.luoyi.mailapp.MainActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_below="@+id/logo"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:background="@drawable/bg_edittext"
        android:hint="@string/hint_mailaddr"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_below="@+id/username"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:background="@drawable/bg_edittext"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/cb_savepw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/cb_savepw"
        android:checked="false" />

    <CheckBox
        android:id="@+id/cb_autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/cb_autologin"
        android:checked="false" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="100dp"
        android:text="@string/btn_login" />
</RelativeLayout>
