<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">
    <EditText
        android:id="@+id/et_addr"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_edittext"
        android:hint="@string/hint_mailaddr" />

    <EditText
        android:id="@+id/et_mailsubject"
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_addr"
        android:inputType="textEmailSubject"
        android:background="@drawable/bg_edittext"
        android:hint="@string/hint_subject"
        android:singleLine="true" />

    <ListView
        android:id="@+id/lv_mailattachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_mailsubject"
        android:layout_margin="5dp"
        android:background="@color/yellow"
        android:visibility="gone" />

    <EditText
        android:id="@+id/et_mailcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_holder"
        android:layout_alignLeft="@+id/et_mailsubject"
        android:layout_below="@+id/lv_mailattachment"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/hint_content"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/btn_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btn_sent"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_sent" />
    </LinearLayout>

</RelativeLayout>